google map error repeat

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <input type="submit" value="Send" class="btn btn-dark">
       </form>
     </div>
-    <div class="map">
+    <div id="map">
 
     </div>
   </section>
@@ -149,7 +149,10 @@
   <script src="js/main.js"></script>
 
   <!-- Google Maps -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGQX7Dhvx_QM4Ihq2JmzzhRcZc9Uvrvjs&callback=initMap"
-    async defer></script>
+ 
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGQX7Dhvx_QM4Ihq2JmzzhRcZc9Uvrvjs&callback=initMap&libraries=&v=weekly"
+      async
+    ></script>
 </body>
 </html>
